--- a/Backoffice/Components/Liquidity/Market/LiquidityEngineComponent.razor
+++ b/Backoffice/Components/Liquidity/Market/LiquidityEngineComponent.razor
@@ -43,7 +43,7 @@
 
 <table>
     <tr>
-        <td>
+        <td style="vertical-align: top">
             <table>
                 <tr>
                     <td><h3>Market's</h3></td>
