--- a/Backoffice/_Imports.razor
+++ b/Backoffice/_Imports.razor
@@ -25,6 +25,6 @@
 @using Backoffice.Components.Liquidity.Market
 @using Backoffice.Components.Liquidity.Portfolio
 @using Backoffice.Components.Liquidity.Settings
-@using Backoffice.Components.Liquidity.Hedging
+@using Backoffice.Components.Liquidity.Wallets
 
 
