--- a/Backoffice/_Imports.razor
+++ b/Backoffice/_Imports.razor
@@ -26,5 +26,6 @@
 @using Backoffice.Components.Liquidity.Portfolio
 @using Backoffice.Components.Liquidity.Settings
 @using Backoffice.Components.Liquidity.Wallets
+@using Backoffice.Components.Books
 
 
