--- a/Backoffice/Pages/_Host.cshtml
+++ b/Backoffice/Pages/_Host.cshtml
@@ -23,6 +23,7 @@
     <link href="_content/Sotsera.Blazor.Toaster/toastr.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="_content/MW.Blazor.TagSelector/styles.css" />
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/default-base.css">
+    <link rel="stylesheet" href="_content/Blazored.Typeahead/blazored-typeahead.css">
     <script src="_content/MW.Blazor.TagSelector/interop.js"></script>
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 </head>
@@ -42,5 +43,5 @@
 
 <script src="_framework/blazor.server.js"></script>
 <script src="js/baseFunctions.js"></script>
-</body>
+<script src="_content/Blazored.Typeahead/blazored-typeahead.js"></script></body>
 </html>
