--- a/Backoffice/Pages/Index.razor
+++ b/Backoffice/Pages/Index.razor
@@ -1,18 +1,44 @@
 ﻿@page "/"
 
-<TagSelector SelectableTags="Tags" @bind-SelectedTags="Selected" Filter="@((item,term) => item.Contains(term))" OnCreateTag="OnCreateTag">
-    <TagTemplate>@context</TagTemplate>
-</TagSelector>
+@using Blazored.Typeahead
 
-Selected: @Selected.Count
+
+<div>
+
+    <TagSelector SelectableTags="Tags" @bind-SelectedTags="Selected" Filter="@((item,term) => item.Contains(term))" OnCreateTag="OnCreateTag">
+        <TagTemplate>@context</TagTemplate>
+    </TagSelector>
+
+    Selected: @Selected.Count
+</div>
+
+<div>
+    <BlazoredTypeahead SearchMethod="Search" @bind-Value="SelectedItem">
+        <SelectedTemplate>@context</SelectedTemplate>
+        <ResultTemplate>@context</ResultTemplate>
+    </BlazoredTypeahead>
+</div>
+
+@if (SelectedItem != null)
+{
+    <p>Selected item: @SelectedItem</p>
+}
+
 
 @code {
 
     IEnumerable<string> Tags = new[] {"Item 1", "Item 2", "Item 3", "Item 4", "Item 5", "Item 6"};
     IList<string> Selected = new List<string>();
 
+    private string SelectedItem;
+    
     void OnCreateTag(string tag)
     {
         Selected.Add(tag);
+    }
+
+    private async Task<IEnumerable<string>> Search(string text)
+    {
+        return Tags.Where(e => e.ToLower().Contains(text.ToLower()));
     }
 }
