--- a/Backoffice/_Imports.razor
+++ b/Backoffice/_Imports.razor
@@ -27,5 +27,6 @@
 @using Backoffice.Components.Liquidity.Settings
 @using Backoffice.Components.Liquidity.Wallets
 @using Backoffice.Components.Books
+@using Backoffice.Components.Clients
 
 
