--- a/Backoffice/Components/Clients/ClientInfoComponent.razor
+++ b/Backoffice/Components/Clients/ClientInfoComponent.razor
@@ -1,10 +1,14 @@
-﻿<div style="height: 100px">
+﻿@using Backoffice.Components.Clients.Model
+<div style="height: 100px">
 
-    <h3>ClientInfocomponent</h3>
+    <h3>@Client.ClientId</h3>
     
 </div>
 
 
 @code {
+    
+    [Parameter]
+    public ClientModel Client { get; set; }
     
 }
