--- a/Backoffice/Pages/Clients.razor
+++ b/Backoffice/Pages/Clients.razor
@@ -1,32 +1,63 @@
 ﻿@page "/Clients"
+@using Backoffice.Components.Clients.Model
 
 <table style="width: 100%; height: 100%">
     <tr>
-            <table style="width: auto">
-                <tr>
-                    <td>
-                        <span>Client Identification</span>
-                    </td>
-                    <td>
-                        <input type="text" @bind="@SearchText"/>
-                    </td>
-                    <td>
-                        <button type="button">Search</button>
-                    </td>
-                    <td>
-                        <button type="button">Last searches</button>
-                    </td>
-                </tr>
-            </table>
+        <table style="width: auto">
+            <tr>
+                <td>
+                    <span>Client Identification</span>
+                </td>
+                <td>
+                    <input type="text" @bind="@SearchText"/>
+                </td>
+                <td>
+                    <button type="button" @onclick="Search">Search</button>
+                </td>
+                <td>
+                    <button type="button">Last searches</button>
+                </td>
+            </tr>
+        </table>
     </tr>
-    <tr>
-        <td rowspan="4">
-            <ClientPresentationComponent />
-        </td>
-    </tr>
+    @if (ClientId != null)
+    {
+        <tr>
+            <td rowspan="4">
+                <ClientPresentationComponent ClientId="@ClientId"/>
+            </td>
+        </tr>
+    }
+    @if (ShowError)
+    {
+        <tr>
+            Client do not found.
+        </tr>
+    }
 </table>
 
 @code {
+
     private string SearchText { get; set; }
-    private string SearchText2 { get; set; }
+
+    private bool ShowError { get; set; } = false;
+    
+    private string ClientId { get; set; }
+
+    private async Task Search()
+    {
+        if (!string.IsNullOrEmpty(SearchText))
+        {
+            ClientId = SearchText;
+            ShowError = false;
+        }
+        else
+        {
+            ClientId = null;
+            ShowError = true;
+        }
+        
+        StateHasChanged();
+    }
+
 }
