--- a/Backoffice/Components/Clients/ClientPresentationComponent.razor
+++ b/Backoffice/Components/Clients/ClientPresentationComponent.razor
@@ -73,11 +73,11 @@
                             break;
 
                         case ClientPage.ActiveOrders:
-                            <p>ActiveOrders</p>
+                            <ClientActiveOrdersComponent />
                             break;
 
                         case ClientPage.TradeHistory:
-                            <p>TradeHistory</p>
+                            <ClientTradeHistoryComponent />
                             break;
 
                         case ClientPage.BlockchainDepositAddress:
