--- a/Backoffice/Components/Clients/ClientBalancesComponent.razor
+++ b/Backoffice/Components/Clients/ClientBalancesComponent.razor
@@ -147,7 +147,7 @@
             WalletId = Wallet.WalletId
         });
 
-        Balances = balancesDto.Balances;
+        Balances = balancesDto.Balances ?? new List<WalletBalance>();
             
         LoaderConfig.Disable();
         StateHasChanged();
