--- a/Backoffice/Components/Clients/ClientInfoComponent.razor
+++ b/Backoffice/Components/Clients/ClientInfoComponent.razor
@@ -1,7 +1,20 @@
 ﻿@using Backoffice.Components.Clients.Model
 <div style="height: 100px">
 
-    <h3>@Client.ClientId</h3>
+    <table>
+        <tr>
+            <td><b>Broker Id:</b></td>
+            <td>@Client.BrokerId</td>
+        </tr>
+        <tr>
+            <td><b>Brand Id:</b></td>
+            <td>@Client.BrandId</td>
+        </tr>
+        <tr>
+            <td><b>Client Id:</b></td>
+            <td>@Client.ClientId</td>
+        </tr>
+    </table>    
     
 </div>
 
